--- a/html/playground.html
+++ b/html/playground.html
@@ -1,62 +1,176 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Hase0278's M3U8 Proxy</title>
-        <meta charset="utf-8">
-        <meta name="title" content="Hase0278's M3U8 Proxy" />
-        <meta name="description" content="Playground for testing Hase0278's m3u8 proxy." />
 
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Hase0278's M3U8 Proxy" />
-        <meta property="og:description" content="Playground for testing Hase0278's m3u8 proxy." />
-        <meta property="og:image" content="" />
+<head>
+    <title>Hase0278's M3U8 Proxy Playground</title>
+    <meta charset="utf-8">
+    <style>
+        body {
+            font-family: sans-serif;
+            padding: 20px;
+            background: #0f0f0f;
+            color: #e0e0e0;
+            max-width: 900px;
+            margin: auto;
+        }
 
-        <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:title" content="Hase0278's M3U8 Proxy"/>
-        <meta property="twitter:description" content="Playground for testing Hase0278's m3u8 proxy." />
-        <meta property="twitter:image" content="" />
-        <style>
-            video {
-                width: 100%;
-                height: 100%;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Very bad playground design but its fine</h1>
-        <p>basically put in an m3u8 for the url, and put stringified headers into the headers section. yeah thats it.</p>
-        <label for="url">URL</label>
-        <input type="text" id="url" value="https://vault-16.owocdn.top/stream/16/16/252f009224b5ebc12a3e0ec633e1f85aa33bdd7e0ef6ac9b6d6134a38e869eba/uwu.m3u8" />
-        <label for="headers">Headers</label>
-        <textarea id="headers">{"referer": "https://kwik.cx"}</textarea>
-        <button onclick="test()">Test</button>
+        h1 {
+            color: #fff;
+            font-size: 1.5rem;
+        }
+
+        .container {
+            background: #1a1a1a;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        label {
+            display: block;
+            margin-top: 15px;
+            font-weight: bold;
+            color: #aaa;
+        }
+
+        input,
+        textarea {
+            width: 100%;
+            box-sizing: border-box;
+            background: #252525;
+            color: #fff;
+            border: 1px solid #333;
+            padding: 12px;
+            border-radius: 4px;
+            margin-top: 5px;
+            font-family: monospace;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 12px 24px;
+            background: #3b82f6;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.2s;
+        }
+
+        button:hover {
+            background: #2563eb;
+        }
+
+        #status {
+            margin-top: 15px;
+            font-size: 0.9rem;
+            color: #888;
+        }
+
+        video {
+            width: 100%;
+            border-radius: 4px;
+            margin-top: 20px;
+            background: #000;
+            aspect-ratio: 16/9;
+        }
+
+        .error-log {
+            margin-top: 20px;
+            background: #2d1a1a;
+            border-left: 4px solid #ef4444;
+            padding: 10px;
+            color: #f87171;
+            display: none;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h1>M3U8 Proxy Playground</h1>
+
+        <label for="url">M3U8 URL</label>
+        <input type="text" id="url"
+            value="https://vault-16.owocdn.top/stream/16/16/252f009224b5ebc12a3e0ec633e1f85aa33bdd7e0ef6ac9b6d6134a38e869eba/uwu.m3u8" />
+
+        <label for="headers">Request Headers (JSON)</label>
+        <textarea id="headers" rows="3">{"referer": "https://kwik.cx"}</textarea>
+
+        <button onclick="test()">Play Now</button>
+        <div id="status">Ready to test.</div>
         <video id="hls" controls></video>
-        <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-        <script>
-            function test() {
-                const url = document.getElementById('url').value;
-                let headers = document.getElementById('headers').value;
+        <div id="errorLog" class="error-log"></div>
+    </div>
 
-                try {
-                    headers = JSON.parse(headers);
-                } catch (e) {
-                    headers = {};
-                    alert("Invalid headers. Set headers to {}.");
-                }
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script>
+        let hls;
+        function test() {
+            const url = document.getElementById('url').value;
+            let headers = document.getElementById('headers').value;
+            const status = document.getElementById('status');
+            const errorLog = document.getElementById('errorLog');
+            const video = document.getElementById('hls');
 
-                console.log("Using URL " + url);
-                console.log("Using headers " + JSON.stringify(headers));
+            if (hls) hls.destroy();
+            errorLog.style.display = 'none';
+            errorLog.innerText = '';
 
-                if (Hls.isSupported()) {
-                    var video = document.getElementById('hls');
-                    var hls = new Hls();
-                    hls.loadSource(`/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`);
-                    hls.attachMedia(video);
-                    hls.on(Hls.Events.MANIFEST_PARSED, function() {
-                        console.log(`/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`)
-                    });
-                }
+            try {
+                headers = JSON.parse(headers);
+            } catch (e) {
+                headers = {};
+                console.warn("Invalid JSON, using empty headers");
             }
-        </script>
-    </body>
+
+            if (Hls.isSupported()) {
+                hls = new Hls({
+                    debug: false,
+                    xhrSetup: function (xhr, url) {
+                        xhr.withCredentials = true; // Required for our session-based proxy
+                    }
+                });
+
+                const proxyUrl = `/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`;
+                status.innerText = "Loading manifest via proxy...";
+
+                hls.loadSource(proxyUrl);
+                hls.attachMedia(video);
+
+                hls.on(Hls.Events.MANIFEST_PARSED, () => {
+                    status.innerText = "Manifest parsed. Playback starting...";
+                    video.play().catch(e => {
+                        status.innerText = "Autoplay blocked. Click Play button.";
+                    });
+                });
+
+                hls.on(Hls.Events.ERROR, (event, data) => {
+                    console.error("HLS Error:", data.type, data.details, data.fatal);
+                    if (data.fatal) {
+                        errorLog.style.display = 'block';
+                        errorLog.innerText = `FATAL ERROR: ${data.details}. Try refreshing.`;
+                        switch (data.type) {
+                            case Hls.ErrorTypes.NETWORK_ERROR:
+                                hls.startLoad();
+                                break;
+                            case Hls.ErrorTypes.MEDIA_ERROR:
+                                hls.recoverMediaError();
+                                break;
+                            default:
+                                hls.destroy();
+                                break;
+                        }
+                    }
+                });
+            } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+                status.innerText = "Native HLS support detected.";
+                const proxyUrl = `/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`;
+                video.src = proxyUrl;
+            }
+        }
+    </script>
+</body>
+
 </html>
