working totally fine

--- a/html/playground.html
+++ b/html/playground.html
@@ -68,11 +68,10 @@
             color: #888;
         }
 
-        video {
+        .video-js {
             width: 100%;
             border-radius: 4px;
             margin-top: 20px;
-            background: #000;
             aspect-ratio: 16/9;
         }
 
@@ -100,21 +99,31 @@
 
         <button onclick="test()">Play Now</button>
         <div id="status">Ready to test.</div>
-        <video id="hls" controls></video>
+        <video id="videoPlayer" class="video-js vjs-default-skin" controls></video>
         <div id="errorLog" class="error-log"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+    <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@videojs/http-streaming@3.10.0/dist/videojs-http-streaming.min.js"></script>
+
     <script>
-        let hls;
+        let player;
+
         function test() {
             const url = document.getElementById('url').value;
             let headers = document.getElementById('headers').value;
             const status = document.getElementById('status');
             const errorLog = document.getElementById('errorLog');
-            const video = document.getElementById('hls');
+            const videoElement = document.getElementById('videoPlayer');
 
-            if (hls) hls.destroy();
+            // Cleanup previous instance
+            if (player) {
+                player.dispose();
+                player = null;
+            }
+
             errorLog.style.display = 'none';
             errorLog.innerText = '';
 
@@ -125,50 +134,53 @@
                 console.warn("Invalid JSON, using empty headers");
             }
 
-            if (Hls.isSupported()) {
-                hls = new Hls({
-                    debug: false,
-                    xhrSetup: function (xhr, url) {
-                        xhr.withCredentials = true; // Required for our session-based proxy
-                    }
+            const proxyUrl = `/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`;
+
+            player = videojs(videoElement, {
+                html5: {
+                    vhs: {
+                        overrideNative: true,
+                        withCredentials: true,
+                        useBandwidthFromLocalStorage: false,
+                        enableLowInitialPlaylist: false,
+                        smoothQualityChange: true,
+                        fastQualityChange: false,
+                        allowSeeksWithinUnsafeLiveWindow: true,
+                        useDevicePixelRatio: true
+                    },
+                    nativeAudioTracks: false,
+                    nativeVideoTracks: false
+                },
+                controls: true,
+                autoplay: false,
+                preload: 'auto'
+            });
+
+            status.innerText = "Loading manifest via proxy...";
+
+            player.src({
+                src: proxyUrl,
+                type: 'application/x-mpegURL',
+                withCredentials: true
+            });
+
+            player.ready(function () {
+                status.innerText = "Video.js ready. Starting playback...";
+                player.play().catch(e => {
+                    status.innerText = "Autoplay blocked. Click Play button.";
                 });
+            });
 
-                const proxyUrl = `/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`;
-                status.innerText = "Loading manifest via proxy...";
+            player.on('error', function () {
+                const error = player.error();
+                console.error("Video.js Error:", error);
+                errorLog.style.display = 'block';
+                errorLog.innerText = `ERROR: ${error.message || error.code}. Check console for details.`;
+            });
 
-                hls.loadSource(proxyUrl);
-                hls.attachMedia(video);
-
-                hls.on(Hls.Events.MANIFEST_PARSED, () => {
-                    status.innerText = "Manifest parsed. Playback starting...";
-                    video.play().catch(e => {
-                        status.innerText = "Autoplay blocked. Click Play button.";
-                    });
-                });
-
-                hls.on(Hls.Events.ERROR, (event, data) => {
-                    console.error("HLS Error:", data.type, data.details, data.fatal);
-                    if (data.fatal) {
-                        errorLog.style.display = 'block';
-                        errorLog.innerText = `FATAL ERROR: ${data.details}. Try refreshing.`;
-                        switch (data.type) {
-                            case Hls.ErrorTypes.NETWORK_ERROR:
-                                hls.startLoad();
-                                break;
-                            case Hls.ErrorTypes.MEDIA_ERROR:
-                                hls.recoverMediaError();
-                                break;
-                            default:
-                                hls.destroy();
-                                break;
-                        }
-                    }
-                });
-            } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-                status.innerText = "Native HLS support detected.";
-                const proxyUrl = `/m3u8-proxy?url=${encodeURIComponent(url)}&headers=${encodeURIComponent(JSON.stringify(headers))}`;
-                video.src = proxyUrl;
-            }
+            player.on('loadedmetadata', function () {
+                status.innerText = "Video loaded successfully!";
+            });
         }
     </script>
 </body>
